force-app/main/default/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Cloudrop__Counter__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Date_Time_of_email_sent__c</fullName>
        <label>Date/Time of email sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloudrop__MassMailer_Campaign_Member_Status__c</fullName>
        <label>MassMailer Campaign Member Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloudrop__Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>